--- a/Atividades_engenharia-main/requirements.txt
+++ b/Atividades_engenharia-main/requirements.txt
@@ -1,7 +1,3 @@
-Flask
-Flask-SQLAlchemy
-Flask-Login
-werkzeug
-gunicorn
-psycopg2-binary
-python-dotenv
+Flask==3.0.3
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
